# LinearEquations

./: CMakeLists.txt  README.md  descent.cpp  gauss.cpp  gauss.h  gauss_main.cpp  jacobi.cpp  linearSystemsSolver.cpp  linearSystemsSolver.h  matrixGenerationMain.cpp  seidel.cpp  sequantialRelaxation.cpp  solverMain.cpp  solver_main.cpp  testing.cpp
